Doing cv.imread and eliminated normalization

--- a/DiffuserReconClean.ipynb
+++ b/DiffuserReconClean.ipynb
@@ -191,7 +191,7 @@
     "\n",
     "\n",
     "####  CALIBRATION #####\n",
-    "calibration_2_15 = io.loadmat('calibration_2_15_v2.mat')\n",
+    "calibration_2_15 = io.loadmat('calibration_2mv _15_v2.mat')\n",
     "\n",
     "M = calibration_2_15['M']\n",
     "mtx = calibration_2_15['mtx']\n",
@@ -363,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def "
+    ""
    ]
   }
  ],
